--- a/home.html
+++ b/home.html
@@ -14,6 +14,27 @@
 <body>
 <div class="container-fluid">
     <img id="banner" src="images/banner.jpg">
+    <nav class="navbar navbar-custom">
+
+        <ul class="nav navbar-nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">New Products</a></li>
+          <li><a href="#">Specials</a></li>
+          <li><a href="#">Categories</a></li>
+
+        </ul>
+
+        <ul class="nav navbar-nav" style="float:right;">
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Shopping Cart</a></li>
+          <li>
+            <div class="searchform">
+              <input type="text" name="search" placeholder="Search">
+      <button class="btn btn-default" type="submit">
+        <i class="glyphicon glyphicon-search"></i>
+            </div></li>
+        </ul>
+    </nav>
 </div>
 
 <div class="container-fluid">
@@ -24,9 +45,12 @@
     <div class="col-sm-3">
       <div class="thumbnail">
         <img src="images/thumb1.jpeg">
-  
+
           <div class="caption">
-            <p> Hi </p>
+            <p class="center">Astray Metalbuild Gundam </p>
+            <p>$12.00
+            <a style="float:right;"href="#">Details</a> </p>
+
           </div>
       </div>
       </div>
@@ -34,7 +58,9 @@
     <div class="thumbnail">
       <img src="images/thumb2.jpeg">
         <div class="caption">
-          <p> Hi </p>
+          <p class="center">Wing Zero EW Gundam</p>
+          <p>$12.00
+          <a style="float:right;"href="#">Details</a> </p>
         </div>
       </div>
     </div>
@@ -43,7 +69,9 @@
       <img src="images/thumb3.jpg">
 
         <div class="caption">
-          <p> Hi </p>
+          <p class="center">Deathscythe EW Gundam</p>
+          <p>$12.00
+          <a style="float:right;"href="#">Details</a> </p>
         </div>
     </div>
     </div>
@@ -52,11 +80,74 @@
         <img src="images/thumb4.jpeg">
 
           <div class="caption">
-            <p> Hi </p>
+            <p class="center">Sandrock EW Gundam</p>
+            <p>$12.00
+            <a style="float:right;"href="#">Details</a> </p>
           </div>
         </div>
       </div>
   </div>
+
+  <h1> Upcoming Products</h1>
+  <div class="row">
+    <div class="col-sm-6">
+        <img src="images/thumb5.jpg">
+    </div>
+    <div class="col-sm-6">
+        <img src="images/thumb6.jpg">
+    </div>
+  </div>
+
+    <h1>Specials </h1>
+    <div class="row">
+      <div class="col-sm-3">
+        <div class="thumbnail">
+          <img src="images/thumb4.jpeg">
+
+            <div class="caption">
+              <p class="center">Sandrock EW Gundam</p>
+              <p>$12.00
+              <a style="float:right;"href="#">Details</a> </p>
+            </div>
+      </div>
+    </div>
+
+    <div class="col-sm-3">
+      <div class="thumbnail">
+        <img src="images/thumb4.jpeg">
+
+          <div class="caption">
+            <p class="center">Sandrock EW Gundam</p>
+            <p>$12.00
+            <a style="float:right;"href="#">Details</a> </p>
+          </div>
+    </div>
+  </div>
+
+  <div class="col-sm-3">
+    <div class="thumbnail">
+      <img src="images/thumb4.jpeg">
+
+        <div class="caption">
+          <p class="center">Sandrock EW Gundam</p>
+          <p>$12.00
+          <a style="float:right;"href="#">Details</a> </p>
+        </div>
+  </div>
+</div>
+
+<div class="col-sm-3">
+  <div class="thumbnail">
+    <img src="images/thumb4.jpeg">
+
+      <div class="caption">
+        <p class="center">Sandrock EW Gundam</p>
+        <p>$12.00
+        <a style="float:right;"href="#">Details</a> </p>
+      </div>
+</div>
+</div>
+
 </div>
 
 
