--- a/home.html
+++ b/home.html
@@ -17,15 +17,15 @@
     <nav class="navbar navbar-custom">
 
         <ul class="nav navbar-nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">New Products</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="newproducts.html">New Products</a></li>
           <li><a href="#">Specials</a></li>
           <li><a href="#">Categories</a></li>
 
         </ul>
 
         <ul class="nav navbar-nav" style="float:right;">
-          <li><a href="#">Login</a></li>
+          <li><a href="login.html">Login</a></li>
           <li><a href="#">Shopping Cart</a></li>
           <li>
             <div class="searchform">
@@ -36,9 +36,16 @@
         </ul>
     </nav>
 </div>
-
+<!--
+New Arrival Container
+-->
 <div class="container-fluid">
   <img id="newarrival" src="images/epyeon.jpg">
+</div>
+<!--
+Featured Items
+-->
+<div class="container-fluid">
   <h1> Featured </h1>
 
   <div class="row">
@@ -48,8 +55,10 @@
 
           <div class="caption">
             <p class="center">Astray Metalbuild Gundam </p>
-            <p>$12.00
-            <a style="float:right;"href="#">Details</a> </p>
+            <div class="centered">
+            <p class="inline" >$12.00 </p>
+            <a class="inline" href="#">Details</a>
+          </div>
 
           </div>
       </div>
@@ -59,19 +68,22 @@
       <img src="images/thumb2.jpeg">
         <div class="caption">
           <p class="center">Wing Zero EW Gundam</p>
-          <p>$12.00
-          <a style="float:right;"href="#">Details</a> </p>
+          <p class="inline">$12.00 </p>
+          <a class="inline" href="#">Details</a>
+        </div>
         </div>
       </div>
-    </div>
   <div class="col-sm-3">
     <div class="thumbnail">
       <img src="images/thumb3.jpg">
 
         <div class="caption">
-          <p class="center">Deathscythe EW Gundam</p>
-          <p>$12.00
-          <a style="float:right;"href="#">Details</a> </p>
+
+          <p>Deathscythe EW Gundam</p>
+
+          <p class="inline">$12.00
+          <a class="inline" href="#">Details</a> </p>
+
         </div>
     </div>
     </div>
@@ -80,70 +92,110 @@
         <img src="images/thumb4.jpeg">
 
           <div class="caption">
-            <p class="center">Sandrock EW Gundam</p>
-            <p>$12.00
-            <a style="float:right;"href="#">Details</a> </p>
+            <p>Sandrock EW Gundam</p>
+
+            <p class="inline" >$12.00
+            <a class="inline" href="#">Details</a> </p>
+          </div>
           </div>
         </div>
-      </div>
   </div>
-
+</div>
+<!--
+Upcoming products container
+-->
+<div class="container-fluid">
   <h1> Upcoming Products</h1>
   <div class="row">
     <div class="col-sm-6">
         <img src="images/thumb5.jpg">
+        <div class="text-box">
+          <div class ="newarrivaltext">
+          <h4>Genobreaker</h4>
+        </div>
+      </div>
     </div>
     <div class="col-sm-6">
         <img src="images/thumb6.jpg">
+        <div class="text-box">
+          <div class ="newarrivaltext">
+          <h4>Liger Zero</h4>
+        </div>
+        </div>
     </div>
   </div>
-
+</div>
+<div class="container-fluid">
     <h1>Specials </h1>
     <div class="row">
       <div class="col-sm-3">
         <div class="thumbnail">
-          <img src="images/thumb4.jpeg">
-
+          <img src="images/thumb7.jpg">
+          <div class="text-box">
+            <div class="sale">
+            <h4>SALE<h4>
+            </div>
+            </div>
             <div class="caption">
-              <p class="center">Sandrock EW Gundam</p>
-              <p>$12.00
-              <a style="float:right;"href="#">Details</a> </p>
+              <p class="center">00 Raiser Gundam</p>
+              <div class="centered">
+              <p class= "inline" style="text-decoration: line-through;color: #9C9C9C;" >$80.00</p>
+              <p class= "inline">  $59.99 </p>
+            </div>
             </div>
       </div>
     </div>
 
     <div class="col-sm-3">
       <div class="thumbnail">
-        <img src="images/thumb4.jpeg">
-
+        <img src="images/thumb8.jpg">
+        <div class="text-box">
+          <div class="sale">
+          <h4>SALE <h4>
+          </div>
+        </div>
           <div class="caption">
-            <p class="center">Sandrock EW Gundam</p>
-            <p>$12.00
-            <a style="float:right;"href="#">Details</a> </p>
+            <p class="center">Destiny Gundam</p>
+            <div class="centered">
+            <p class= "inline" style="text-decoration: line-through;color: #9C9C9C;" >$75.99</p>
+            <p class= "inline">  $39.99 </p>
+          </div>
           </div>
     </div>
   </div>
 
   <div class="col-sm-3">
     <div class="thumbnail">
-      <img src="images/thumb4.jpeg">
-
+      <img src="images/thumb9.jpg">
+      <div class="text-box">
+        <div class="sale">
+        <h4>SALE <h4>
+        </div>
+        </div>
         <div class="caption">
-          <p class="center">Sandrock EW Gundam</p>
-          <p>$12.00
-          <a style="float:right;"href="#">Details</a> </p>
+          <p class="center">Strike Freedom Gundam</p>
+          <div class="centered">
+          <p class= "inline" style="text-decoration: line-through;color: #9C9C9C;" >$105.00</p>
+          <p class= "inline">  $89.99 </p>
+        </div>
         </div>
   </div>
 </div>
 
 <div class="col-sm-3">
   <div class="thumbnail">
-    <img src="images/thumb4.jpeg">
-
+    <img src="images/thumb10.jpg">
+    <div class="text-box">
+      <div class="sale">
+      <h4>SALE <h4>
+      </div>
+      </div>
       <div class="caption">
-        <p class="center">Sandrock EW Gundam</p>
-        <p>$12.00
-        <a style="float:right;"href="#">Details</a> </p>
+        <p class="center">Burning Gundam</p>
+        <div class="centered">
+        <p class= "inline" style="text-decoration: line-through; color: #9C9C9C;" >$69.00</p>
+        <p class= "inline">  $49.99 </p>
+      </div>
       </div>
 </div>
 </div>
